# spidey

./: .gitignore  LICENSE  pyproject.toml  scrapy.cfg
spidey/: items.py  pipelines.py  settings.py
spidey/middlewares/: middlewares.py
spidey/spiders/: rep_spider.py
